<!--
  ~ Copyright (C) 2007 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
	<string name="app_name">jet-pack</string>

	<!-- common -->
	<string name="item_album_art">앨범 아트</string>
	<string name="item_back">뒤로가기</string>

	<!-- anko first -->
	<string name="anko_first_message">Hello</string>
	<string name="anko_first_message_change">Changed value</string>
	<string name="anko_first_message_change_delay">Changed value delayed</string>
	<string name="anko_first_btn_change_text">CHANGE TEXT</string>
	<string name="anko_first_btn_change_text_delay">CHANGE TEXT - DELAYED</string>

	<!-- Test menu-->
	<string name="test_menu_anko_first">Android DSL Anko Tutorial</string>
	<string name="test_menu_paging">Paging component in Jetpack</string>
	<string name="test_menu_paging_description">Positional Paging 연습</string>
	<string name="test_menu_listadater">ListAdapter\n더 효과적인 RecyclerView Adapter</string>
	<string name="test_menu_listadater_description">New ListAdapter</string>
	<string name="test_menu_item_touch">Drag &amp; Drop 과 Swipe Delete</string>
	<string name="test_menu_drag_drop_description">Item Touch Helper 연습</string>
	<string name="test_menu_collapsing_toolbar">CollapsingToolbarLayout 연습</string>
	<string name="test_menu_collapsing_toolbar_description">기본 UI 연습 (1)</string>
	<string name="test_slide_up_panel_ex_title">Google Music,Youtube Style\nSlide Up Player Controller UI 연습</string>
	<string name="test_slide_up_panel_ex_description">SlideUpPanel 연습</string>
	<string name="test_center_scroll_recycler_title">Recycler View 가 Center scroll 이 가능하도록하는 프토토타입</string>
	<string name="test_center_scroll_recycler_description">Center Scroll 연습</string>
	<string name="test_landscape_mode_title">MVVM 에서 가로모드 대응해보기</string>
	<string name="test_landscape_mode_description">가로모드 대응</string>

	<!-- bottom menu -->
	<string name="bottom_nav_home">Home</string>
	<string name="bottom_nav_introduce">History</string>

	<!-- Home -->
	<string name="home_title">테스트</string>
	<string name="home_time_format">현재 시간 MM월 dd일 hh시 mm분</string>

	<!-- history -->
	<string name="history_title">사용 기술 및 상태</string>
	<string name="history_success">[연구성공]</string>
	<string name="history_failed">[연구실패]</string>

	<!-- Paging -->
	<string name="paging_title">페이징 예제</string>
	<string name="paging_countable_sub_title_format">개수가 정해진 페이징 모듈 사용, 총 개수: [%1$s]</string>
	<string name="paging_unbounded_sub_title">개수가 정해지지 않은 페이징 모듈 사용</string>
	<string name="paging_error_state">앗, 에러가 발생했습니다 !\n새로고침을 눌러주세요.</string>
	<string name="paging_retry">새로고침</string>
	<string name="paging_add_item">아이템을 추가했습니다. [%1$d]개</string>
	<string name="paging_notify_data_size_changed">데이터의 총 사이즈가 변경되어, DataSource 를 다시 부릅니다.</string>
	<string name="paging_notify_refresh">새로고침을 수행합니다.</string>
	<string name="paging_add_item_unbounded_format">사이즈를 알 수 없어, [%1$d]부터 [%2$d]개 추가합니다.</string>
	<string name="paging_banner_to_countable">아이템을 누르면,\nCountable 페이징 화면으로 이동합니다.</string>
	<string name="paging_banner_to_unbounded">아이템을 누르면,\nUnbounded 페이징 화면으로 이동합니다.</string>

	<!-- listAdapter -->
	<string name="listadapter_title">ListAdapter 예제</string>
	<string name="listadapter_remove_message">선택된 아이템들이 삭제되었습니다.</string>
	<string name="listadapter_action_message">확인</string>
	<string name="listadapter_goodbye_snack_bar">스낵바가 종료되었습니다.</string>

	<!-- Drag and Drop -->
	<string name="item_touch_helper_title">Item Touch Helper 연습</string>

	<!-- CollapsingToolbarLayout 에 대한 연습 -->
	<string name="collapsing_toolbar_ex_title">CollapsingToolbarLayout 연습</string>
	<string name="collapsing_toolbar_ex_item_click">click Item [%1$d]</string>
	<string name="collapsing_toolbar_ex_toolbar_title">CollapsingToolbar 연습</string>
	<string name="collapsing_toolbar_fab_message">CollapsingToolbarLayout 를 한번 만들어봤지 :-)</string>

	<!-- SlideUpPanel 예제 -->
	<string name="slide_up_panel_ex_title">SlideUpPanel 연습</string>
	<string name="slide_up_panel_prev_btn_description">이전 곡 재생</string>
	<string name="slide_up_panel_play_btn_description">현재 곡 재생</string>
	<string name="slide_up_panel_next_btn_description">다음 곡 재생</string>
	<string name="slide_up_panel_play_message">재생을 시도합니다.</string>
	<string name="slide_up_panel_prev_message">이전 곡을 재생합니다.</string>
	<string name="slide_up_panel_next_message">다음 곡을 재생합니다.</string>
	<string name="slide_up_panel_title">N\'s lab Music</string>
	<string name="slide_cover">앨범 커버</string>
	<string name="slide_up_cover_collapsed">패널 닫기</string>
	<string name="slide_land_title">%1$s - %2$s</string>

	<!-- Center scroll 을 위한 RecyclerView -->
	<string name="center_scroll_recycler_title">Center Scroll 연습</string>
	<string name="center_scroll_to_first">FIRST</string>
	<string name="center_scroll_to_last">LAST</string>

	<!-- 가로모드 대응 처리 튜토리얼 -->
	<string name="landscape_mode_title">가로모드 대응 (세로모드)</string>

</resources>
